# sentence2pronunciation

./: .gitignore  Pipfile  README.md  setup.cfg
src/sentence2pronunciation/: __init__.py  core.py  lookup.py  lookup_cache.py  main.py  multiprocessing.py  sentence2pronunciation.py  types.py
tests/: test_core.py  test_lookup_cache.py  test_multiprocessing.py  test_sentence2pronunciation.py
tests/py_core/: test_sentences2pronunciations_from_cache.py
