[metadata]
name = sentence2pronunciation
version = 1.0.0
author="Jasmin Sternkopf"
author_email="jasmin.sternkopf@mathematik.tu-chemnitz.de"
description=""
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/jasminsternkopf/sentence2pronunciation"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src